--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -585,9 +585,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   }
 
   private Boolean isValidAdditionalCalcItemRetrieval(RollupAsyncProcessor roll) {
-    if ((roll.isFullRecalc == false && roll.metadata.IsFullRecordSet__c == false)) {
-      return false;
-    } else if (roll.op?.name().contains('DELETE') == true && roll.metadata.LimitAmount__c == null) {
+    if (roll.op?.name().contains('DELETE') == true && roll.metadata.LimitAmount__c == null) {
       // full recalc rollups won't have an op, hence the safe navigation above
       return false;
     }
