Fixed CONCAT_DISTINCT bug encountered while working on cached flow rollups for #321

--- a/extra-tests/classes/RollupTests.cls
+++ b/extra-tests/classes/RollupTests.cls
@@ -2519,8 +2519,7 @@ private class RollupTests {
     System.assertEquals(1, mock.Records.size(), 'All records share the same account for update');
     Account updatedAcc = (Account) mock.Records[0];
     System.assertEquals(4800, updatedAcc.AnnualRevenue, 'SUM AFTER_UPDATE from flow should match');
-    // TODO - exposed a concat distinct bug here
-    // System.assertEquals('again, anew, distinct', updatedAcc.Description, 'CONCAT_DISTINCT AFTER_UPDATE from flow should match');
+    System.assertEquals('again, anew, distinct', updatedAcc.Description, 'CONCAT_DISTINCT AFTER_UPDATE from flow should match');
   }
 
   @IsTest
